--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - checkout
       - run: echo "A first hello"
-      - run: plot_iris_dataset.html
+      - run: ./plot_iris_dataset.html
