--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,9 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/python:3.7.0
     steps:
       - checkout
       - run: echo "A first hello"
+      - run: virtualenv -p python3 env_name
      
