--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - checkout
       - run: echo "A first hello"
-      - run: virtualenv -p python3 env_name
+      - run: jupyter-nbconvert --execute task_1/*.ipynb
     
      
