--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,29 @@
 version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/python:3.7.0
-    steps:
-      - checkout
-      - run: echo "A first hello"
-    
+jobs: # a collection of steps
+  build: # runs not using Workflows must have a `build` job as entry point
+    working_directory: ~/first_repository # directory where steps will run
+    docker: # run the steps with Docker
+      - image: circleci/python:3.7.0 # ...with this image as the primary container; this is where all `steps` will run
+      steps: # a collection of executable commands
+      - checkout # special step to check out source code to the working directory
+      - restore_cache: # restores saved dependency cache if the Branch key template or requirements.txt files have not changed since the previous run
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - run: # install and activate virtual environment with pip
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache: # special step to save dependency cache
+          key: cache-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+      - run: # run tests
+          command: |
+            . venv/bin/activate
+            jupyter-nbconvert --execute task_1/*ipynb
+            mv task_1/*.html task_2/
+      - store_artifacts: # special step to store test reports as artifacts
+          path: task_2
+          destination: task_1
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
      
