--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,9 @@ jobs: # a collection of steps
           command: |
             . venv/bin/activate
             jupyter-nbconvert task_1/*.ipynb
+            mv /*.html task_2
       - store_artifacts: # special step to store test reports as artifacts
-          path: task_1
+          path: task_2
           destination: task_2
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
      
