--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs: # a collection of steps
           command: |
             . venv/bin/activate
             jupyter-nbconvert task_1/*.ipynb
+            mkdir -p task_2
             mv task_1/*.html task_2
       - store_artifacts: # special step to store test reports as artifacts
           path: task_2
