--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs: # a collection of steps
       - run: # run tests
           command: |
             . venv/bin/activate
-            jupyter-nbconvert --execute task_1/*.ipynb
+            jupyter-nbconvert task_1/*.ipynb
             mkdir -p task_2
             mv task_1/*.html task_2
       - store_artifacts: # special step to store test reports as artifacts
