--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.15.2
+numpy==1.15.1
 jupyter==1.0.0
+ipython==6.5.0
 scikit-learn==0.19.2
-matplotlib==3.0.0
 scipy==1.1.0
+matplotlib==3.0.0
