--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,12 @@ jobs: # a collection of steps
           name: kaggle
           command: |
             . venv/bin/activate
+            export KAGGLE_USERNAME=datadinosaur
+            export KAGGLE_KEY=c0a1546c96be24654a0ea24f6a3e4613
+            mkdir .kaggle
+            mv kaggle.json .kaggle
             kaggle competitions download titanic
-            jupyter —execute Titanic_mirosh.ipynb
+            jupyter-nbconvert —execute Titanic_mirosh.ipynb
             kaggle competitions submit titanic -f titanic.csv -m "My submission messsage"
     
           paths:
