--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs: # a collection of steps
             . venv/bin/activate
             export KAGGLE_USERNAME
             export KAGGLE_KEY
+            export OSF_PASSWORD
             echo "{"username":\"${KAGGLE_USERNAME}\","key":\"${KAGGLE_KEY}\}" > kaggle.json
             mkdir .kaggle
             mv kaggle.json .kaggle
@@ -30,7 +31,7 @@ jobs: # a collection of steps
             mv titanic-mirosh.html task
             mv titanic.csv task
             kaggle competitions submit titanic -f task/titanic.csv -m "My submission messsage"
-         #   osf -p <project> upload task/titanic.csv osfstorage/Miroshnichenko
+            osf -p 5k26m upload task/titanic.csv osfstorage/dmitriy_miroshnichenko
             
           paths:
             - "venv"
