--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs: # a collection of steps
             mv titanic.csv task
             kaggle competitions submit titanic -f task/titanic.csv -m "My submission messsage"
             osf -p 5k26m upload task/titanic.csv osfstorage/dmitriy_miroshnichenko
-            echo $OSF_PASSWORD
+            read $OSF_PASSWORD
             
           paths:
             - "venv"
